--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,16 @@
+---
+import '../styles/global.css'
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full w-full m-0">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <title>Garage</title>
     </head>
-    <body>
+    <body class="h-full w-full m-0">
         <slot />
     </body>
 </html>
 
-<style>
-    html,
-    body {
-        margin: 0;
-        width: 100%;
-        height: 100%;
-    }
-</style>
