--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,12 @@
 ---
 import '../styles/global.css'
+
+interface Props {
+    title?: string;
+}
+
+const { title } = Astro.props;
+const pageTitle = title ? `${title} | Garage` : 'Garage';
 ---
 
 <!doctype html>
@@ -7,7 +14,7 @@ import '../styles/global.css'
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Garage</title>
+        <title>{pageTitle}</title>
     </head>
     <body class="h-full w-full m-0">
         <slot />
