--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import { tool as identileTool } from './identile.astro';
 
 // Define available tools
-const tools = [
-  // { name: 'Tool Name', path: '/tool-path', description: 'Tool description' }
-];
+const tools = [identileTool];
 
 const GITHUB_REPO = 'https://github.com/sabiz/Garage';
 ---
