--- a/src/pages/identile.astro
+++ b/src/pages/identile.astro
@@ -22,7 +22,7 @@ const description = tool.description;
         </p>
       </header>
 
-      <div class="rounded-2xl bg-white p-6 shadow-lg ring-1 ring-slate-200">
+      <div class="rounded-sm bg-white p-6 shadow-lg ring-1 ring-slate-200">
         <IdentileGenerator client:only />
       </div>
     </main>
