--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import { tool as identileTool } from './identile.astro';
+import { tool as fileCryptoTool } from './file-crypto.astro';
 
 // Define available tools
-const tools = [identileTool];
+const tools = [identileTool, fileCryptoTool];
 
 const GITHUB_REPO = 'https://github.com/sabiz/Garage';
 ---
